# n-dimensional-strip-packing

./: Cargo.toml  N-dimensional cut generator.py  N-dimensional-cut-generator.py  README.md
src/: box3d.rs  lib.rs  sorting.rs  vector3d.rs
